--- a/src/pages/MainAdmin/style.css
+++ b/src/pages/MainAdmin/style.css
@@ -207,6 +207,7 @@
   display: flex;
   flex-direction: column;
   min-height: 0; /* so children can scroll */
+  margin-bottom: 64px;
 }
 
 .panel-header {
